--- a/install.txt
+++ b/install.txt
@@ -1,5 +1,15 @@
-testFolder
-MavricMC/gitGet-Template/main/code.lua
-code.lua
-MavricMC/gitGet-Template/main/functions.lua
-folder/functions.lua
+blackjack
+MavricMC/CC-Blackjack/main/game.lua
+game.lua
+MavricMC/CC-Blackjack/main/api.lua
+api.lua
+MavricMC/CC-Blackjack/main/cards.lua
+cards.lua
+MavricMC/CC-Blackjack/main/pinapi.lua
+pinapi.lua
+MavricMC/CC-Blackjack/main/logo.nfp
+logo.nfp
+MavricMC/CC-Blackjack/main/card.nfp
+card.nfp
+MavricMC/CC-Blackjack/main/cardBack.nfp
+cardBack.nfp
